fixed extra margin problem

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -1,7 +1,7 @@
 .footer-background {
   background-color: #000;
   color: #999;
-  margin-top:20px;
+  margin-top:10px;
   padding-top: 20px;
   padding-bottom: 20px;
 }
@@ -85,12 +85,12 @@
 
 .grid-background {
   background-color: #fff6f0;
-  margin-top: 18px;
+  margin-top: 14px;
 }
 
 .grid-background-side {
   background-image: url("/images/house-pattern.jpg");
-  margin-top: 18px;
+  margin-top: 14px;
 }
 
 
